--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -73,7 +73,7 @@
                             <p class="partnerships__introduction">{{ partnerships_block.summary }}</p>
                         </div>
                         <div class="partnerships__carousel">
-                            {% include "patterns/organisms/carousel/carousel--square.html" with carousel=partnerships_block.slides modifier='carousel--square' datatag='data-square-carousel' %}
+                            {% include "patterns/organisms/carousel/carousel--square.html" with carousel=partnerships_block.slides modifier='carousel--square' datatag='data-peek-carousel' %}
                         </div>
 
                     </div>
