--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -40,7 +40,7 @@
 
             <div class="tabs js-tabs" data-tab-hash>
 
-                {% include "patterns/molecules/tab-nav/tab-nav.html" with modifier="bg bg--dark" sticky="true" %}
+                {% include "patterns/molecules/tab-nav/tab-nav.html" with modifier="bg bg--dark" sticky=True ask_question=True %}
 
                 <div class="tabs__panel js-tab-panel" id="overview" role="tabpanel" aria-labelledby="tab-overview">
                     {% include "patterns/organisms/programme_tabs/programme_overview.html" %}
