--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -171,7 +171,7 @@
                                 <h2 class="partnerships__heading heading heading--two">{{ research_news.title }}</h2>
                             </div>
                             <div class="partnerships__carousel">
-                                {% include "patterns/organisms/carousel/carousel--square.html" with carousel=research_news.slides modifier='carousel--square' datatag='data-square-carousel' %}
+                                {% include "patterns/organisms/carousel/carousel--square.html" with carousel=research_news.slides modifier='carousel--square' datatag='data-peek-carousel' %}
                             </div>
                         </div>
                     </div>
