--- a/rca/static_src/sass/components/_image-video-block.scss
+++ b/rca/static_src/sass/components/_image-video-block.scss
@@ -6,6 +6,10 @@
         padding-bottom: ($gutter * 6);
     }
 
+    &--no-padding {
+        padding-bottom: 0;
+    }
+
     &--tight-heading {
         #{$root}__heading {
             @include media-query(large) {
