--- a/rca/static_src/sass/components/_introduction.scss
+++ b/rca/static_src/sass/components/_introduction.scss
@@ -16,6 +16,7 @@
     }
 
     .app--landing-page &,
+    .app--school &,
     .app--guide & {
         #{$root}__container {
             margin-bottom: $gutter;
