--- a/rca/static_src/sass/components/_project-overview.scss
+++ b/rca/static_src/sass/components/_project-overview.scss
@@ -36,6 +36,10 @@
         @include media-query(large) {
             padding-left: 33.333%;
         }
+
+        &--bottom-margin {
+            margin-bottom: ($gutter * 2);
+        }
     }
 
     &__heading {
