--- a/rca/project_styleguide/templates/patterns/pages/schools/school_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/school_page.html
@@ -132,6 +132,7 @@
 
         {# Related Programmes and courses #}
         {# TODO talk with nick about duplicating / altering this tempalte to add the summary text #}
+        {# Summary is in related_programmes/related_short_courses.summary #}
         <div class="section__row">
             {% include "patterns/molecules/relatedcontent/relatedprogrammes--large.html" with title=page.related_programmes_title related_sections=related_programmes %}
             {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with title=page.related_short_courses_title related_sections=related_short_courses %}
