Lots of content for the School pages

--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -189,7 +189,7 @@
 
                 <div class="section__row schools__about--logos {% if research_links or research_cta %}section__row--last{% else %}section__row--last-large{% endif %}">
                     <div class="section__header grid">
-                        <h2 class="section__heading section__heading--secondary heading heading--five">Research collaboration with&hellip;</h2>
+                        <h2 class="section__heading section__heading--secondary heading heading--five">Research collaborators</h2>
                     </div>
                     <div class="section__content">
                         <div class="u-small-and-medium-bp-only">
@@ -242,7 +242,7 @@
                     </div>
                 </div>
 
-                {% include "patterns/organisms/school-section-footer/school-section-footer.html" with links=programmes_links cta=programmes_cta %}
+                {% include "patterns/organisms/school-section-footer/school-section-footer.html" with links=programmes_links  cta=programmes_cta %}
 
                 <div class="section__notch">
                     <div class="section__notch-fill section__notch-fill--third-col"></div>
