Rework the contact fields to use a shared mixin
- So validation can be shared
- Minimize repeated code

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -64,7 +64,7 @@
                 <section class="section bg bg--light">
                     <div class="contact-anchor" id="contact"></div>
                     <div class="section__row">
-                        {% include "patterns/organisms/contact/contact.html" with heading=programme_page_global_fields.contact_title text=programme_page_global_fields.contact_text image=page.contact_image %}
+                        {% include "patterns/organisms/contact/contact.html" with heading=programme_page_global_fields.contact_title text=programme_page_global_fields.contact_text image=page.contact_model_image %}
                     </div>
                 </section>
 
