--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.html
@@ -149,14 +149,14 @@
                 </section>
             {% endif %}
 
-            {% if page.contact_image %}
+            {% if page.contact_model_image %}
                 <section class="section bg bg--light">
                     <div class="section__notch section__notch--small-med-only">
                         <div class="section__notch-fill section__notch-fill--second-col"></div>
                     </div>
                     <div class="contact-anchor" id="contact"></div>
                     <div class="section__row section__row--first">
-                        {% include "patterns/organisms/contact/contact.html" with heading="Contact us" text=page.contact_text image=page.contact_image %}
+                        {% include "patterns/organisms/contact/contact.html" with heading="Contact us" text=page.contact_model_text image=page.contact_model_image %}
                     </div>
                 </section>
 
