--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.html
@@ -115,11 +115,11 @@
                 </section>
             {% endif %}
 
-            {% if page.contact_image %}
+            {% if page.contact_model_image %}
                 <section class="section section--top-space bg bg--light">
                     <div class="contact-anchor" id="contact"></div>
                     <div class="section__container">
-                        {% include "patterns/organisms/contact/contact.html" with heading="Ask a question" text=page.contact_text image=page.contact_image %}
+                        {% include "patterns/organisms/contact/contact.html" with heading="Ask a question" text=page.contact_model_text image=page.contact_model_image %}
                     </div>
                 </section>
             {% endif %}
