Fix for anchor nav item active links

--- a/rca/static_src/sass/components/_anchor-nav-item.scss
+++ b/rca/static_src/sass/components/_anchor-nav-item.scss
@@ -7,10 +7,7 @@
         color: $color--white;
 
         &.is-active {
-            &::after {
-                width: 100%;
-                left: 0;
-            }
+            @include underline-hover-target-reset();
         }
     }
 }
