Adds related staff functionality to the schoolpage

--- a/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.html
+++ b/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.html
@@ -1,5 +1,5 @@
 
-    <div class="people-module 
+    <div class="people-module
         {% if people|length == 1 %}
             people-module--single
         {% elif people|length > 4 %}
@@ -14,10 +14,10 @@
                     <h2 class="heading heading--four people-module__heading {% if anchor_heading %}anchor-heading{% endif %}" {% if anchor_heading %}id="staff"{% endif %}>{{ title }}</h2>
                 </div>
             {% endif %}
-            
+
         {% if people|length > 17 %}
         </div>
-        <div class="people-module__container"> 
+        <div class="people-module__container">
         {% endif %}
 
             <div class="people-module__content {% if people|length > 17 %}people-module__content--carousel{% endif %}">
@@ -37,13 +37,13 @@
 
         {% if people|length > 17 %}
         </div>
-        <div class="people-module__container grid"> 
+        <div class="people-module__container grid">
         {% endif %}
 
-            {% if page.staff_link %}
+            {% if page.staff_link or related_staff.view_more_link %}
                 <div class="people-module__action">
-                    <a class="link link--primary link--link body body--one" href="{{ page.staff_link }}">
-                        <span class="link__label link__label--tight">{{ page.staff_link_text }}</span>
+                    <a class="link link--primary link--link body body--one" href="{% firstof page.staff_link related_staff.view_more_link.url %}">
+                        <span class="link__label link__label--tight">{% firstof page.staff_link_text related_staff.view_more_link.text %}</span>
                         <svg class="link__icon" width="12" height="8" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                     </a>
                 </div>
