--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -59,6 +59,7 @@
 @import 'components/index-module';
 @import 'components/instagram-feed';
 @import 'components/job-titles';
+@import 'components/jump-nav';
 @import 'components/image';
 @import 'components/image-caption-link';
 @import 'components/image-info';
