--- a/rca/project_styleguide/templates/patterns/molecules/jump-nav/jump-nav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/jump-nav/jump-nav.html
@@ -9,7 +9,7 @@
                 <use xlink:href="#arrow"></use>
             </svg>
         </div>
-        <nav class="jump-nav__container tab-nav__container">
+        <nav class="jump-nav__container tab-nav__container" data-anchor-nav>
             {% for button in item %}
                 <a class="tab-item" href="#{{ button.title|slugify }}" aria-selected="true">{{ button.title }}</a>
             {% endfor %}
