--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
@@ -64,7 +64,7 @@
     <div class="key-details__section key-details__section--social">
         <ul class="key-details__list">
             {% for link in page.social_links %}
-            <li class="key-details__list-item">{{ link|richtext }}</li>
+                <li class="key-details__list-item">{{ link }}</li>
             {% endfor %}
         </ul>
     </div>
