--- a/rca/project_styleguide/templates/patterns/molecules/tab-nav/tab-nav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/tab-nav/tab-nav.html
@@ -2,7 +2,9 @@
     <div class="tab-nav__layout grid">
 <nav class="tab-nav__container" role="tablist" aria-label="Tabs">
     {% for tab in tabs %}
-        <a id="tab-{{ tab.title|slugify }}" class="tab-item js-tab-item {% if forloop.counter == 1 %}active{% endif %}" href="#{{ tab.title|slugify }}" role="tab" aria-controls="{{ tab.title|slugify }}" data-tab="{{ tab.title|slugify }}" aria-selected="true">{{ tab.title }}</a>
+        {% with tab.title|slugify as tab_title_slug %}
+            <a id="tab-{{ tab_title_slug }}" class="tab-item js-tab-item {% if forloop.counter == 1 %}active{% endif %}" href="#{{ tab_title_slug }}" role="tab" aria-controls="{{ tab_title_slug }}" data-tab="{{ tab_title_slug }}" aria-selected="true">{{ tab.title }}</a>
+        {% endwith %}
     {% endfor %}
     {% if ask_question %}
     <a href="#contact" class="tab-item link link--tertiary link--down" role="tab">
