Fix migrations and template rendering

--- a/rca/project_styleguide/templates/patterns/molecules/logo-card/logo-card.html
+++ b/rca/project_styleguide/templates/patterns/molecules/logo-card/logo-card.html
@@ -4,11 +4,11 @@
         {% image item.image fill-20x20 as image_small %}
         {% image item.image fill-200x200 as image_large %}
     {% endif %}
-    <a href="{{ item.href }}" class="logo-card__container">
+    <a href="{{ item.link.url }}" class="logo-card__container">
         {% if item.image %}{% include "patterns/atoms/image/image--lazyload.html" with image_small=image_small width=200 height=200 image_large=image_large classList='logo-card__image' %}{% endif %}
         <div class="logo-card__content">
             <h3 class="logo-card__heading body body--two">
-               {{ item.title }}
+               {{ item.link.title }}
             </h3>
         </div>
     </a>
