--- a/rca/project_styleguide/templates/patterns/organisms/logo-carousel/logo-carousel.html
+++ b/rca/project_styleguide/templates/patterns/organisms/logo-carousel/logo-carousel.html
@@ -4,13 +4,13 @@
             <li class="carousel__item glide__slide">
                 <div class="carousel__logo-slide">
             {% for slide in carousel %}
-                {% if forloop.counter0|divisibleby:per_slide and not forloop.first %}    
+                {% if forloop.counter0|divisibleby:per_slide and not forloop.first %}
                     </div>
                 </li>
                 <li class="carousel__item glide__slide">
                     <div class="carousel__logo-slide">
                 {% endif %}
-                    {% include 'patterns/molecules/logo-card/logo-card.html' with item=slide %}
+                    {% include 'patterns/molecules/logo-card/logo-card.html' with item=slide.value %}
             {% endfor %}
                 </div>
             </li>
